# epub-voicevox

./: .gitignore  Cargo.toml  README.md  justfile
src/: book.rs  html.rs  layout.rs  main.rs  ui.rs  voice.rs
