[package]
name = "epub-voicevox"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "TUI EPUB reader with VOICEVOX speech synthesis"
readme = "README.md"

[[bin]]
name = "bk"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
path-clean = "1.0.1"
ratatui = "0.30.2"
ratatui-image = { version = "11.0.5", default-features = false, features = ["crossterm", "image-defaults"] }
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json", "query"] }
rbook = "0.7.9"
rodio = { version = "0.21.1", default-features = false, features = ["playback", "wav"] }
scraper = "0.27.0"
serde_json = "1.0"
unicode-width = "0.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dist]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
